[gd_scene load_steps=2 format=3 uid="uid://h7u0pw4eih5v"]

[ext_resource type="Script" path="res://rooms/room_template.gd" id="1_template"]

[node name="RoomTemplate" type="Node2D"]
script = ExtResource("1_template")

[node name="FloorLayer" type="TileMapLayer" parent="."]

[node name="WallLayer" type="TileMapLayer" parent="."]

[node name="Markers" type="Node2D" parent="."]

[node name="DoorMarkers" type="Node2D" parent="Markers"]

[node name="LootMarkers" type="Node2D" parent="Markers"]

[node name="EnemyMarkers" type="Node2D" parent="Markers"]
